cmake_minimum_required(VERSION 2.8)
project( BlurImage )

if (${APPLE})
    include_directories(/usr/local/include)
    link_directories(/usr/local/lib)
    add_executable( BlurImage BlurImage.cpp )
    target_link_libraries( BlurImage opencv_calib3d opencv_core opencv_features2d opencv_flann opencv_highgui opencv_imgcodecs opencv_imgproc opencv_ml opencv_objdetect opencv_photo opencv_shape opencv_stitching opencv_superres opencv_ts opencv_video opencv_videoio opencv_videostab )
else ()
    find_package( OpenCV )
    include_directories( ${OpenCV_INCLUDE_DIRS} )
    add_executable( BlurImage BlurImage.cpp )
    target_link_libraries( BlurImage ${OpenCV_LIBS} )
endif()
